--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "scripts.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "dev": "vite",
@@ -13,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.13.0",
     "tonal": "^6.0.1",
     "tone": "^14.9.17",
+    "typescript": "^5.4.5",
     "vite": "^5.2.11"
   },
   "devDependencies": {
