--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.20.0",
     "@types/node": "^20.13.0",
+    "0g": "^0.4.2",
+    "munkres-js": "^1.2.2",
+    "npm": "^10.8.1",
     "tonal": "^6.0.1",
     "tone": "^14.9.17",
     "typescript": "^5.4.5",
