--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: List root directory contents
+        run: ls -la
+
       - name: List build directory contents
         run: ls -la ./build
 
